--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 			<version>2.6.6</version>
 		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
