adding refresh token to responeDTO

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
+JWT_SERCET: elite
+JWT_EXPIRATION_MIN: 3600000
+JWT_EXPIRATION_DAY: 604800000
