Adding Expection and Register User
- Still have bug in BadRequestExpection

--- a/pom.xml
+++ b/pom.xml
@@ -8,14 +8,16 @@
 		<version>2.6.6</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+	<packaging>jar</packaging>
 	<groupId>com.mall</groupId>
 	<artifactId>elite</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.1.0</version>
 	<name>elite</name>
 	<description>Project create from elite program in nashtech</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
